_common.less
// COLORS

@beige: hsl(45, 18%, 91%);
@beige-dark: hsl(44, 22%, 77%);
@beige-dark-2: hsl(45, 21%, 71%);
@beige-light: hsl(26, 15%, 91%);
@beige-light-2: hsl(36, 12%, 92%);
@beige-light-3: hsl(40, 12%, 95%);

@black: hsl(0, 0%, 16%);

@grey: hsl(0, 0%, 75%);
@grey-dark: hsl(0, 0%, 50%);
@grey-dark2: hsl(0, 0%, 38%);
@grey-dark-3: hsl(0, 0%, 29%);
@grey-light: hsl(0, 0%, 83%);
@grey-light-2: hsl(0, 4%, 89%);
@grey-light-3: hsl(30, 20%, 98%);

@lime: hsl(66, 68%, 57%);
@lime-light: hsl(67, 100%, 98%);

@mint: hsl(166, 39%, 54%);
@mint-dark: hsl(166, 30%, 46%);
@mint-light: hsl(167, 35%, 57%);
@mint-light-2: hsl(168, 100%, 98%);

@pink: hsl(352, 76%, 65%);
@pink-light: hsl(351, 64%, 98%);

@salmon: hsl(7, 79%, 68%);
@salmon-light: hsl(8, 74%, 74%);

@white: #fff;

// FONTS

@font-default: 'brandon-grotesque', sans-serif;
@font-alternative: 'Quicksand', sans-serif;

// BUTTONS

@button-radius: 3px;
@button-padding: 6px 12px;

// MIXINS

.mixin-absolute-center() {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.mixin-button(@size: 'medium') {
  @color: white;

  border: 0;
  border-radius: @button-radius;
  background-color: @mint;
  text-align: center;
  text-transform: uppercase;
  color: @color;
  text-decoration: none;
  display: inline-flex;
  align-items: center;
  padding: @button-padding;
  position: relative;
  box-shadow: inset 0 -2px 0 0 @mint-dark;
  font-weight: bold;
  font-family: @font-default;
  line-height: 1;

  & when (@size = 'small') {
    font-size: 12px;
    min-height: 30px;
  }

  & when (@size = 'medium') {
    font-size: 14px;
    min-height: 50px;
  }

  &:hover {
    text-decoration: none;
    color: @color;
  }

  &:not([disabled]):not(.disabled) {
    &:hover {
      background-color: @mint-dark;
      box-shadow: none;
      cursor: pointer;
    }
  }

  &[disabled],
  &.disabled {
    background-color: hsla(@mint, .3);
    box-shadow: none;
  }

  &.doing {
    background-color: @mint-dark;
    box-shadow: none;
    .mixin-invisible-content;
    .mixin-button-spinner(@white);
  }

  &.done {
    background-color: @lime;
    box-shadow: none;
  }
}

.mixin-invisible-content() {
  color: transparent;

  * {
    visibility: hidden;
  }
}

.mixin-button-spinner(@color) {
  .vtex__icon-spinner {
    color: @color;
    max-height: 80%;
    visibility: visible; // Overrides .mixin-invisible-content
    .mixin-absolute-center();
  }
}

.mixin-button-ghost(@size: 'medium') {
  @border-style: solid;

  border-radius: @button-radius;
  color: @mint-light;
  text-align: center;
  text-transform: uppercase;
  text-decoration: none;
  display: inline-flex;
  align-items: center;
  padding: @button-padding;
  font-weight: bold;
  font-family: @font-default;
  line-height: 1;

  & when (@size = 'small') {
    font-size: 12px;
    min-height: 30px;
    border: 1px @border-style;
  }

  & when (@size = 'medium') {
    font-size: 14px;
    min-height: 50px;
    border: 1px @border-style;
  }

  &:hover {
    text-decoration: none; // Overrides bootstrap default style
  }

  &:not([disabled]):not(.disabled) {
    &:hover {
      color: @mint-dark;
      cursor: pointer;
    }
  }

  &[disabled],
  &.disabled {
    color: hsla(@mint, .3);
  }

  &.doing {
    border-color: @mint-dark;
    .mixin-invisible-content;
    .mixin-button-spinner(@white);
  }

  &.done {
    @background-color: @lime;

    background-color: @background-color;
    border-color: @background-color;
  }
}

.mixin-button-ghost-grey(@size: 'medium') {
  border-radius: @button-radius;
  border: 2px solid @grey-light;
  display: inline-block;
  position: relative;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 0.2px;
  cursor: pointer;

  & when (@size = 'medium') {
    padding: 12px 22px;
    font-size: 14px;
  }

  & when (@size = 'small') {
    padding: 3px 16px;
    font-size: 12px;
  }

  &.doing {
    .mixin-invisible-content;
    .mixin-button-spinner(@mint);
  }

  &.done {}
}

.mixin-grid() {
  display: -ms-grid;
  display: grid;
}

.mixin-grid-template-rows(@template) {
  -ms-grid-rows: @template;
  grid-template-rows: @template;
}

.mixin-grid-template-columns(@template) {
  -ms-grid-columns: @template;
  grid-template-columns: @template;
}

.mixin-grid-row(@row: 1, @span: 1) {
  -ms-grid-row: @row;
  -ms-grid-row-span: @span;
  grid-row: @row ~'/' @span + @row;
}

.mixin-grid-column(@column: 1, @span: 1) {
  -ms-grid-column: @column;
  -ms-grid-column-span: @span;
  grid-column: @column ~'/' @span + @column;
}

